<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="planets_array">
        <item>G#/Ab</item>
        <item>A</item>
        <item>A#/Bb</item>
        <item>B</item>
        <item>C</item>
        <item>C#/Db</item>
        <item>D</item>
        <item>D#/Eb</item>
        <item>E</item>
        <item>F</item>
        <item>F#/Gb</item>
        <item>G</item>
    </string-array>

    <string name="app_name">SongSequencerApp</string>
    <string name="hello_world">Game here!</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Start Game</string>
    <string name="title_activity_middleman_connection">MiddlemanConnection</string>
    <string name="label_ip">IP:</string>
    <string name="label_port">Port:</string>
    <string name="connect">Connect</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="Setting">Settings</string>
    <string name="ChooseTune">Choose Your Tune:</string>
    <string name="Synth1">Drums</string>
    <string name="Synth2">Bass</string>
    <string name="Synth3">Strings</string>
    <string name="Synth4">Xylo</string>
    <string name="ChooseKey">Choose Key:</string>
    <string name="title_activity_settings_menu">SettingsMenu</string>
    <string name="Done">Done</string>
    <string name="ChooseBpm">Choose Tempo:</string>
    <string name="sound_button">Sound</string>
    <string name="play_loop_button">Play Loop</string>
    <string name="RecordLoop">Record Loops</string>
    <string name="title_activity_loop">LoopActivity</string>
    <string name="title_activity_loop_settings">LoopSettings</string>
    <string name="beats_divisions_number">4</string>
    <string name="session_button">Individual Session</string>
    <string name="title_activity_easter_egg">EasterEgg</string>

</resources>
